--- a/index.html
+++ b/index.html
@@ -3,60 +3,58 @@
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>九百九十九</title>
-  <meta name="description" content="从善如流">
+    <title>九百九十九</title>
+    <meta name="description" content="从善如流">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
 
 <body>
 
-  <div class="wrapper">
+<div class="wrapper">
     <header>
-      <h1 class="title">九百九十九</h1>
+        <h1 class="title">九百九十九</h1>
     </header>
     <div id="container">
-      <p class="tagline">从善如流</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/sslcs" class="code">View 九百九十九 on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p class="tagline">从善如流</p>
 
-</article>
-      </div>
+        <div id="main" role="main">
+            <div class="download-bar">
+                <span class="blc"></span><span class="trc"></span>
+            </div>
+            <article class="markdown-body">
+                <h3>
+                    <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span
+                            class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+            </article>
+        </div>
     </div>
     <footer>
-      <div class="owner">
-
-      <p><a href="https://github.com/sslcs" class="avatar"><img src="https://avatars2.githubusercontent.com/u/5799655?v=2&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/sslcs">sslcs</a> on <a href="https://www.github.com">GitHub</a></p>
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
+        <div class="owner">
+            <p><a href="https://github.com/sslcs" class="avatar"><img
+                    src="https://avatars2.githubusercontent.com/u/5799655?v=2&amp;s=60" width="48" height="48"></a>View
+                <a href="https://github.com/sslcs">sslcs</a> on <a href="https://www.github.com">GitHub</a></p>
+        </div>
     </footer>
-  </div>
-  <div class="current-section">
+</div>
+<div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/sslcs/sslcs.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/sslcs/sslcs.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+    <a href="https://github.com/sslcs/sslcs.github.io/tarball/master" class="tar">tar</a><a
+        href="https://github.com/sslcs/sslcs.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source
+    code</a>
 
-  
+    <p class="name"></p>
+</div>
+
+
 </body>
 </html>
