change checkbox to switch

--- a/充值缴费.html
+++ b/充值缴费.html
@@ -1369,7 +1369,7 @@
 
               <!-- Unnamed (Image) -->
               <div id="u6092" class="ax_default image">
-                <img id="u6092_img" class="img " src="images/账号管理/u427.png"/>
+                <img id="u6092_img" class="img " src="images/用户管理/u2089.png"/>
               </div>
             </div>
           </div>
@@ -1378,7 +1378,7 @@
 
               <!-- Unnamed (Image) -->
               <div id="u6093" class="ax_default image">
-                <img id="u6093_img" class="img " src="images/账号管理/u440.png"/>
+                <img id="u6093_img" class="img " src="images/用户管理/u2090.png"/>
               </div>
             </div>
           </div>
