--- a/水价项目.html
+++ b/水价项目.html
@@ -1409,7 +1409,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u6444" class="ax_default image">
-                  <img id="u6444_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u6444_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -1418,7 +1418,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u6445" class="ax_default image">
-                  <img id="u6445_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u6445_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
