--- a/用户管理.html
+++ b/用户管理.html
@@ -2575,7 +2575,7 @@
 
                   <!-- Unnamed (Image) -->
                   <div id="u2089" class="ax_default image">
-                    <img id="u2089_img" class="img " src="images/账号管理/u427.png"/>
+                    <img id="u2089_img" class="img " src="images/用户管理/u2089.png"/>
                   </div>
                 </div>
               </div>
@@ -2584,7 +2584,7 @@
 
                   <!-- Unnamed (Image) -->
                   <div id="u2090" class="ax_default image">
-                    <img id="u2090_img" class="img " src="images/账号管理/u440.png"/>
+                    <img id="u2090_img" class="img " src="images/用户管理/u2090.png"/>
                   </div>
                 </div>
               </div>
