--- a/设备信息.html
+++ b/设备信息.html
@@ -38,7 +38,7 @@
         </div>
 
         <!-- Unnamed (Group) -->
-        <div id="u2480" class="ax_default" data-left="597" data-top="140" data-width="650" data-height="627">
+        <div id="u2480" class="ax_default" data-left="597" data-top="140" data-width="650" data-height="631">
 
           <!-- Unnamed (Rectangle) -->
           <div id="u2481" class="ax_default label">
@@ -264,7 +264,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2512" class="ax_default image">
-                  <img id="u2512_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u2512_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -273,7 +273,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2513" class="ax_default image">
-                  <img id="u2513_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u2513_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
@@ -288,7 +288,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2516" class="ax_default image">
-                  <img id="u2516_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u2516_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -297,7 +297,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2517" class="ax_default image">
-                  <img id="u2517_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u2517_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
@@ -312,7 +312,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2520" class="ax_default image">
-                  <img id="u2520_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u2520_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -321,7 +321,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2521" class="ax_default image">
-                  <img id="u2521_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u2521_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
