--- a/价格模板.html
+++ b/价格模板.html
@@ -1396,7 +1396,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u6658" class="ax_default image">
-                  <img id="u6658_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u6658_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -1405,7 +1405,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u6659" class="ax_default image">
-                  <img id="u6659_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u6659_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
