--- a/添加户表.html
+++ b/添加户表.html
@@ -62,7 +62,7 @@
         </div>
 
         <!-- Unnamed (Group) -->
-        <div id="u2592" class="ax_default" data-left="688" data-top="122" data-width="650" data-height="624">
+        <div id="u2592" class="ax_default" data-left="688" data-top="122" data-width="650" data-height="628">
 
           <!-- Unnamed (Rectangle) -->
           <div id="u2593" class="ax_default label">
@@ -307,7 +307,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2626" class="ax_default image">
-                  <img id="u2626_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u2626_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -316,7 +316,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2627" class="ax_default image">
-                  <img id="u2627_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u2627_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
@@ -331,7 +331,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2630" class="ax_default image">
-                  <img id="u2630_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u2630_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -340,7 +340,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2631" class="ax_default image">
-                  <img id="u2631_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u2631_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
@@ -355,7 +355,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2634" class="ax_default image">
-                  <img id="u2634_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u2634_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -364,7 +364,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2635" class="ax_default image">
-                  <img id="u2635_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u2635_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
