--- a/添加采集器.html
+++ b/添加采集器.html
@@ -62,7 +62,7 @@
         </div>
 
         <!-- Unnamed (Group) -->
-        <div id="u2562" class="ax_default" data-left="594" data-top="133" data-width="650" data-height="450">
+        <div id="u2562" class="ax_default" data-left="594" data-top="133" data-width="650" data-height="454">
 
           <!-- Unnamed (Rectangle) -->
           <div id="u2563" class="ax_default label">
@@ -218,7 +218,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2584" class="ax_default image">
-                  <img id="u2584_img" class="img " src="images/账号管理/u427.png"/>
+                  <img id="u2584_img" class="img " src="images/用户管理/u2089.png"/>
                 </div>
               </div>
             </div>
@@ -227,7 +227,7 @@
 
                 <!-- Unnamed (Image) -->
                 <div id="u2585" class="ax_default image">
-                  <img id="u2585_img" class="img " src="images/账号管理/u440.png"/>
+                  <img id="u2585_img" class="img " src="images/用户管理/u2090.png"/>
                 </div>
               </div>
             </div>
